Fixed banner and pximg on iphone and ipad when scrolling.

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -164,10 +164,10 @@ input, select, textarea {
 		margin: 0 0 1em 0;
 	}
 
-		h1 a, h2 a, h3 a, h4 a, h5 a, h6 a {
-			color: inherit;
-			text-decoration: none;
-		}
+	h1 a, h2 a, h3 a, h4 a, h5 a, h6 a {
+		color: inherit;
+		text-decoration: none;
+	}
 
 	h1 {
 		font-family: "Open Sans", Arial, Helvetica, sans-serif;;
@@ -176,7 +176,7 @@ input, select, textarea {
 		line-height: 1.3;
 	}
 
-	.we {
+	.h1-bold {
 		font-weight: 900;
 	}
 	h2 {
@@ -186,7 +186,7 @@ input, select, textarea {
 		font-weight: 300;
 		letter-spacing: 0em;
 	}
-	#one h2 {
+	#about-us h2 {
 		margin-bottom: 0.5em;
 	}
 	.quotes h2 {
@@ -260,7 +260,7 @@ input, select, textarea {
 		h3 {
 			font-size: 1.75em;
 		}
-		#one p {
+		#about-us p {
 			text-align: center;
 		}
 		.contact-icons {
@@ -1912,11 +1912,6 @@ input, select, textarea {
 			}
 		}
 		@media screen and (max-width: 1280px) {
-
-			.split {
-				/* margin-left: -3.75em; */
-			}
-
 				.split > * {
 					margin-left: 4.5em !important;
 				}
@@ -1952,7 +1947,7 @@ input, select, textarea {
 				.image-about > img {
 					padding-left: 0 !important;
 				}
-				#one > div > div > #one-image {
+				#about-us > div > div > #one-image {
 					max-width: 30%;
 					margin: 5%;
 				}
@@ -4923,8 +4918,8 @@ input, select, textarea {
 			}
 			#banner {
 				padding: 4em 0 1em 0 ;
-				background-attachment: scroll;
-				background-position: center;
+				background-attachment: scroll !important;
+				background-position: center center !important;
 			}
 			.posts-grid {
 				max-width: 100% !important;
@@ -4934,6 +4929,12 @@ input, select, textarea {
 			}
 			.posts-grid > article {
 				max-width: 100%;
+			}
+			.pximg2{
+				min-height: 380px;
+				background-attachment: scroll !important;
+				background-position: 50% 58% !important;
+				background-size: cover;
 			}
 		}
 		@media screen and (max-width: 1024px) and (max-height: 1360px) {
@@ -4946,15 +4947,12 @@ input, select, textarea {
 			#banner > .inner {
 				bottom: -40px !important;
 			}
-			/* .posts-grid {
-				max-width: 100% !important;
+			.pximg2{
+				min-height: 380px;
+				background-attachment: scroll !important;
+				background-position: 50% 58% !important;
+				background-size: cover;
 			}
-			.posts-grid img {
-				height: 250px;
-			}
-			.posts-grid > article {
-				max-width: 100%;
-			} */
 		}
 /* Main */
 
@@ -5513,14 +5511,14 @@ input, select, textarea {
 	opacity: 1;
 }
 
-#one {
+#about-us {
 	padding: 0;
 	background: linear-gradient(#FFFFFF, #fcfcfc);
 }
-#one > div > div > #one-image {
+#about-us > div > div > #one-image {
 	align-self: center;
 }
-#one p {
+#about-us p {
 	font-size: 1.25em;
 }
 .pximg2{
